--- a/frontend/src/app.css
+++ b/frontend/src/app.css
@@ -2,6 +2,11 @@
   background-color: rgb(226, 226, 226);
 }
 
+* {
+  font-family: -apple-system, 'San Francisco',
+    'Helvetica Neue', sans-serif;
+}
+
 .container {
   background-color: #fff;
 }
