--- a/frontend/src/components/messages/message.css
+++ b/frontend/src/components/messages/message.css
@@ -2,19 +2,13 @@
   display: flex;
   flex-direction: column;
   margin-top: 15px;
+  cursor: pointer;
 }
 
 .messageTop {
   display: flex;
-}
-
-.messageImg {
-  width: 32px;
-  height: 32px;
-  border-radius: 50%;
-  object-fit: cover;
-  margin-right: 10px;
-  cursor: pointer;
+  align-items: center;
+  position: relative;
 }
 
 .messageText {
@@ -23,12 +17,23 @@
   background-color: rgb(0, 0, 54);
   color: white;
   max-width: 325px;
+  box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.3);
+  white-space: pre-wrap;
+  word-wrap: break-word;
 }
 
 .messageBottom {
   font-size: 12px;
   margin-top: 7px;
-  margin-left: 50px;
+  margin-left: 7px;
+  color: #aaa;
+}
+
+.messageDeleteContainer {
+  position: absolute;
+  top: 50%;
+  right: 60px;
+  transform: translateY(-50%);
 }
 
 .message.own {
