--- a/src/components/share/share.css
+++ b/src/components/share/share.css
@@ -1,7 +1,6 @@
 .share {
   width: 98%;
   border-radius: 10px;
-  -webkit-box-shadow: 0px 0px 16px -8px rgba(0, 0, 0, 0.68);
   box-shadow: 0px 0px 16px -8px rgba(0, 0, 0, 0.68);
 }
 
@@ -12,6 +11,7 @@
 .shareTop {
   display: flex;
   align-items: center;
+  margin-bottom: 20px;
 }
 
 .shareProfileImg {
@@ -25,37 +25,58 @@
 .shareInput {
   border: none;
   outline: none;
-  width: 80%;
+  width: 100%;
+  font-size: 16px;
+  margin-left: 10px;
 }
 
 .shareHr {
-  margin: 20px;
+  margin: 20px 0;
 }
 
 .shareBottom {
   display: flex;
-  object-fit: contain;
+  flex-direction: column;
+}
+
+.shareImgContainer {
+  position: relative;
+  margin-bottom: 20px;
+}
+
+.shareImg {
   width: 100%;
-  margin-top: 20px;
-  width: 100%;
-  max-height: 500px;
+  height: auto;
   object-fit: contain;
+}
+
+.shareCancelImg {
+  position: absolute;
+  top: 0;
+  right: 0;
+  padding: 5px;
+  cursor: pointer;
+  background-color: rgba(0, 0, 0, 0.5);
+  color: #fff;
+  border-radius: 50%;
 }
 
 .shareOptions {
   display: flex;
-  margin-left: 15px;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .shareOption {
   display: flex;
   align-items: center;
-  margin-right: 35px;
+  margin-right: 20px;
   cursor: pointer;
-  display: inline-block;
   border: none;
-  background-color: white;
+  background-color: transparent;
 }
+
 .shareOption:hover {
   background-color: #eff2f5;
   border-radius: 5px;
@@ -63,36 +84,10 @@
 
 .shareIcon {
   font-size: 18px;
-  margin-right: 3px;
+  margin-right: 5px;
 }
 
 .shareOptionText {
   font-size: 14px;
   font-weight: 500;
-}
-
-.replyOptionText {
-  display: flex;
-}
-
-.replyIcon {
-  transform: scaleX(-1);
-}
-
-.shareImgContainer {
-  padding: 0 20px 10px 20px;
-  position: relative;
-}
-
-.shareImg {
-  width: 100%;
-  object-fit: cover;
-}
-
-.shareCancelImg {
-  position: absolute;
-  top: 0;
-  right: 20px;
-  cursor: pointer;
-  color: white;
 }
