--- a/src/components/sidebar/sidebar.css
+++ b/src/components/sidebar/sidebar.css
@@ -48,6 +48,11 @@
   margin-bottom: 30px;
 }
 
+.followChat {
+  display: flex;
+  justify-content: space-around;
+}
+
 .sidebarInfoItem {
   margin-bottom: 10px;
 }
@@ -70,6 +75,14 @@
 .editCancelOption {
   cursor: pointer;
   margin-left: 5px;
+}
+
+.sidebarInfoEditButton {
+  cursor: pointer;
+}
+
+.relationshipOptions {
+  cursor: pointer;
 }
 
 .sidebarFollowings {
@@ -104,4 +117,23 @@
   font-size: 15px;
   font-weight: 500;
   cursor: pointer;
+  width: 100%;
+}
+
+.sidebarChatButton {
+  margin-top: 30px;
+  margin-bottom: 10px;
+  border: none;
+  background-color: rgb(7, 7, 90);
+  color: white;
+  border-radius: 5px;
+  padding: 5px;
+  display: flex;
+  align-items: center;
+  font-size: 15px;
+  font-weight: 500;
+  cursor: pointer;
+  width: 82.641px;
+  height: 24px;
+  text-decoration: none;
 }
