--- a/src/pages/register/register.css
+++ b/src/pages/register/register.css
@@ -37,6 +37,7 @@
   outline: none;
   font-size: medium;
   padding-left: 15px;
+  width: 100%;
 }
 
 .registerButton {
@@ -53,4 +54,16 @@
 .registerForgot {
   text-align: center;
   color: #274d61;
+}
+
+.passwordInputContainer {
+  position: relative;
+}
+
+.passwordVisibilityIcon {
+  position: absolute;
+  top: 50%;
+  right: 10px;
+  transform: translateY(-50%);
+  cursor: pointer;
 }
