--- a/src/pages/messenger/messenger.css
+++ b/src/pages/messenger/messenger.css
@@ -1,19 +1,13 @@
 .messenger {
   height: calc(100vh - 80px);
   display: flex;
+  border-top: 1px solid rgb(215, 215, 215);
+  border-top-width: 1px;
 }
 
 .chatMenu {
   flex: 1;
   max-width: 100%;
-}
-
-.chatMenuInput {
-  width: 90%;
-  padding: 10px 0;
-  border: none;
-  border-bottom: 1px solid gray;
-  outline: none;
 }
 
 .chatBox {
