--- a/src/app.css
+++ b/src/app.css
@@ -128,6 +128,11 @@
     display: none;
     flex: 0;
   }
+
+  .searchResults {
+    width: auto;
+    position: inherit;
+  }
 }
 
 @media screen and (min-width: 600px) {
